--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,9 +38,17 @@ jobs:
           args: ./b.sh
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive
+    - name: Checkout Upstream Repo
+      uses: actions/checkout@v3
+      #with:
+      #  repository: hrydgard/ppsspp
+      #  ref: master
+      #  submodules: recursive
+    #- name: Checkout AppImage Repo
+    #  uses: actions/checkout@v3
+    #  with:
+    #      clean: false
+    #      path: ci
     - name: Prepare ccache timestamp
       id: ccache_cache_timestamp
       shell: cmake -P {0}
@@ -48,14 +56,14 @@ jobs:
           string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
           message("::set-output name=timestamp::${current_date}")
     - name: cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ~/.ccache
         key: build-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
         restore-keys: |
             build-ccache-
     - name: Install Qt
-      uses: jurplel/install-qt-action@v2
+      uses: jurplel/install-qt-action@v3
       #if: matrix.extra == 'qt'
 
     - name: Install Linux dependencies
@@ -109,9 +117,9 @@ jobs:
     - name: Upload build
       run: |
             ls -al Artifacts/
-            wget -c https://github.com/tcnksm/ghr/releases/download/v0.13.0/ghr_v0.13.0_linux_amd64.tar.gz
-            tar xfv ghr_v0.13.0_linux_amd64.tar.gz      
-            ghr_v0.13.0_linux_amd64/ghr -u qurious-pixel -r ppsspp -recreate -n 'Continuous build' -b "GitHub https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" continuous Artifacts/
+            wget -c https://github.com/tcnksm/ghr/releases/download/v0.16.0/ghr_v0.16.0_linux_amd64.tar.gz
+            tar xfv ghr_v0.16.0_linux_amd64.tar.gz      
+            ghr_v0.16.0_linux_amd64/ghr -u qurious-pixel -r ppsspp -recreate -n 'Continuous build' -b "GitHub https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" continuous Artifacts/
     
   
 
